--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-offline": "^3.0.19",
     "gatsby-plugin-react-helmet": "^3.1.14",
     "gatsby-plugin-sharp": "^2.2.38",
+    "gatsby-plugin-typography": "^2.3.17",
     "gatsby-source-airtable": "^2.0.10",
     "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-sharp": "^2.3.4",
@@ -24,8 +25,13 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-iframe": "^1.8.0",
     "react-motion": "^0.5.2",
-    "styled-components": "^4.4.1"
+    "react-typography": "^0.16.19",
+    "styled-components": "^4.4.1",
+    "typeface-rubik": "0.0.72",
+    "typography": "^0.16.19",
+    "typography-theme-funston": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
