--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "auth0-js": "^9.11.3",
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.11",
     "gatsby-image": "^2.2.32",
+    "gatsby-plugin-create-client-paths": "^2.1.17",
     "gatsby-plugin-manifest": "^2.2.27",
     "gatsby-plugin-offline": "^3.0.19",
     "gatsby-plugin-react-helmet": "^3.1.14",
