--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
+    "bulma": "^0.8.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.11",
     "gatsby-image": "^2.2.32",
@@ -18,11 +19,14 @@
     "gatsby-plugin-manifest": "^2.2.27",
     "gatsby-plugin-offline": "^3.0.19",
     "gatsby-plugin-react-helmet": "^3.1.14",
+    "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-plugin-sass": "^2.1.23",
     "gatsby-plugin-sharp": "^2.2.38",
     "gatsby-plugin-typography": "^2.3.17",
     "gatsby-source-airtable": "^2.0.10",
     "gatsby-source-filesystem": "^2.1.36",
     "gatsby-transformer-sharp": "^2.3.4",
+    "node-sass": "^4.13.0",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
