--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
-    "bulma": "^0.8.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.18.6",
     "gatsby-image": "^2.2.34",
@@ -38,8 +37,7 @@
     "styled-components": "^4.4.1",
     "typeface-rubik": "0.0.72",
     "typography": "^0.16.19",
-    "typography-theme-funston": "^0.16.19",
-    "use-session-storage": "^1.0.0"
+    "typography-theme-funston": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
