--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^2.18.6",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-create-client-paths": "^2.1.18",
+    "gatsby-plugin-layout": "^1.1.16",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^3.0.26",
     "gatsby-plugin-react-helmet": "^3.1.16",
