removed auth0 entirely

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typography-theme-funston": "^0.16.19"
   },
   "devDependencies": {
+    "eslint": "^6.7.2",
     "prettier": "^1.19.1"
   },
   "keywords": [
@@ -53,7 +54,8 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
