--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@reach/dialog": "^0.6.4",
+    "@reach/tabs": "^0.6.4",
+    "@reach/visually-hidden": "^0.6.2",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
@@ -17,6 +20,7 @@
     "gatsby-plugin-create-client-paths": "^2.1.18",
     "gatsby-plugin-layout": "^1.1.16",
     "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-netlify-identity": "^0.0.3",
     "gatsby-plugin-offline": "^3.0.26",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-react-svg": "^2.1.2",
