--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@mkitio/gatsby-theme-password-protect": "^2.1.1",
     "@reach/dialog": "^0.6.4",
     "@reach/tabs": "^0.6.4",
     "@reach/visually-hidden": "^0.6.2",
