--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hamburger-menu": "^1.1.1",
     "react-helmet": "^5.2.1",
     "react-iframe": "^1.8.0",
     "react-motion": "^0.5.2",
