--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reach/visually-hidden": "^0.6.2",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.18.6",
     "gatsby-image": "^2.2.34",
@@ -27,6 +28,7 @@
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-source-airtable": "^2.0.12",
     "gatsby-source-filesystem": "^2.1.40",
