--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.18.6",
+    "gatsby-cli": "^2.8.29",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-create-client-paths": "^2.1.18",
     "gatsby-plugin-layout": "^1.1.16",
@@ -42,7 +43,9 @@
     "react-helmet": "^5.2.1",
     "react-iframe": "^1.8.0",
     "react-motion": "^0.5.2",
+    "react-scroll": "^1.7.16",
     "react-typography": "^0.16.19",
+    "smooth-scroll": "^16.1.2",
     "styled-components": "^4.4.1",
     "typeface-rubik": "0.0.72",
     "typography": "^0.16.19",
