--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-iframe": "^1.8.0",
     "react-motion": "^0.5.2",
     "react-scroll": "^1.7.16",
+    "react-scrolllock": "^5.0.0",
     "react-typography": "^0.16.19",
     "smooth-scroll": "^16.1.2",
     "styled-components": "^4.4.1",
