--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
     "@mkitio/gatsby-theme-password-protect": "^2.1.1",
     "@reach/dialog": "^0.6.4",
     "@reach/tabs": "^0.6.4",
@@ -17,6 +19,7 @@
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
+    "formik": "^2.1.4",
     "gatsby": "^2.18.6",
     "gatsby-cli": "^2.8.29",
     "gatsby-image": "^2.2.34",
@@ -50,7 +53,8 @@
     "styled-components": "^4.4.1",
     "typeface-rubik": "0.0.72",
     "typography": "^0.16.19",
-    "typography-theme-funston": "^0.16.19"
+    "typography-theme-funston": "^0.16.19",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
