--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "^16.12.0",
     "react-hamburger-menu": "^1.1.1",
     "react-helmet": "^5.2.1",
