--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "bufferutil": "^4.0.1",
     "dotenv": "^8.2.0",
     "formik": "^2.1.4",
-    "gatsby": "^2.18.6",
+    "gatsby": "^2.19.16",
     "gatsby-cli": "^2.8.29",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-create-client-paths": "^2.1.18",
@@ -55,6 +56,7 @@
     "typeface-rubik": "0.0.72",
     "typography": "^0.16.19",
     "typography-theme-funston": "^0.16.19",
+    "utf-8-validate": "^5.0.2",
     "yup": "^0.28.1"
   },
   "devDependencies": {
