--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-source-airtable": "^2.0.12",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.6",
+    "install-peers": "^1.0.3",
     "node-sass": "^4.13.0",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
