--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reach/dialog": "^0.6.4",
     "@reach/tabs": "^0.6.4",
     "@reach/visually-hidden": "^0.6.2",
+    "airtable": "^0.8.1",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
     "bufferutil": "^4.0.1",
